SERVER-92181: Retry dropping unfinished indexes during RTS (#25092)

GitOrigin-RevId: d73f64063b8305a17b423f97f3103186540a7131